fixed navbar and fixed spacing issues

--- a/project.css
+++ b/project.css
@@ -49,6 +49,11 @@ a> img {
 .headtxt{
   color:orange;
 }
+ 
+.navlink  {color: white;
+font-size: 20px;
+
+}
 
 .btn-outline 
   {
@@ -60,16 +65,7 @@ a> img {
     background: 0 0;
     transition: all .3s ease-in-out;
 }
- .homebtn-outline 
-  {
-    position:fixed;
-    left:30px;
-    border: solid 2px #fff;
-    font-size: 20px;
-    color: #fff;
-    background: 0 0;
-    transition: all .3s ease-in-out;
-}
+ 
 
 .btn-outline:hover,
 .btn-outline:focus,
@@ -129,20 +125,7 @@ ul#navigation li.last {
       }
 
 
-/* not used anymore
-.box {
-  background-color: #000000;
-  color: #00CED1;
-  float: right;
-  padding: 10px;
-  border-radius: 10px;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  background: #000000;
-  transition-property: background;
-  transition-duration:1s;
-  transition-timing-function:linear;}
-  */
+
 .logo {font-size: 3em;  
         text-shadow: 2px 2px #18bc9c;
         color:white;}
@@ -186,7 +169,7 @@ ul#navigation li.last {
     color:white;
 }
 
-.navbar-fixed-top .navbar-brand {
+.navbar-fixed-top .navbar-brand  {
         font-size: 2em;
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
@@ -232,6 +215,8 @@ hr.star-light:after {
 section.success {
     color: #fff;
     background: #4DDBFF;
+    margin-bottom: 350px;
+    
 }
 footer .footer-above {
     margin: 10px;
@@ -249,6 +234,8 @@ footer .footer-below {
 }
 div .well {
   background-color: #2c3e50;
+  margin-top:35px;
+
 }
 
 a,
@@ -266,6 +253,7 @@ header {
     text-align: center;
     color: #000;
     background: #18bc9c;
+
 }
 .well {
   background-color: orange;
@@ -273,4 +261,5 @@ header {
   color: white;
 
 }
+
 
